[package]
name = "fluffy-potato"
version = "0.1.0"
authors = ["alice <alice@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
redis = {version="0.21.2", features=["r2d2"]}
